--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -32,7 +32,6 @@ env = STEAM_FORCE_DESKTOPUI_SCALING,"1.5"
 env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
-env = GTK_THEME=adw-gtk3-dark:dark
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=hyprland
 
@@ -45,7 +44,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 
 # Set programs that you use
 $terminal = alacritty 
-$fileManager = GTK_THEME=adw-gtk3-dark:dark nautilus
+$fileManager = nautilus
 $menu = rofi -show drun
 $browser = firefox
 
@@ -62,6 +61,7 @@ $browser = firefox
 exec-once = waybar
 exec-once = hyprpaper 
 exec-once = clipse -listen
+exec-once = wl-clip-persist --clipboard regular
 
 
 #############################
