--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -62,6 +62,7 @@ exec-once = waybar
 exec-once = hyprpaper 
 exec-once = clipse -listen
 exec-once = wl-clip-persist --clipboard regular
+exec-once = nm-applet
 
 
 #############################
@@ -173,7 +174,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.8 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.9 # -1.0 - 1.0, 0 means no modification.
     scroll_factor = 0.9
 
     touchpad {
