--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.wallpapers/od_planets.png
-wallpaper = ,~/.wallpapers/od_planets.png
+preload = ~/.wallpapers/od_abstract.png
+wallpaper = ,~/.wallpapers/od_abstract.png
