waybar: backport old waybar config to new dotfiles

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -214,6 +214,8 @@ bind = $mainMod, L, movefocus, r
 
 bind = $mainMod_SHIFT, F, fullscreen
 
+bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | wl-copy
+
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
