--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -1,52 +1,33 @@
 {
-    // "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
-    // "height": 30, // Waybar height (to be removed for auto height)
-    "margin": "20 20 0 20",
-    // "width": 1280, // Waybar width
-    // Choose the order of the modules
-    "modules-left": ["hyprland/workspaces", "custom/pacman"],
-    "modules-center": ["clock"],
-    "modules-right": ["pulseaudio", "tray"],
-
-
-    //***************************
-    //*  Modules configuration  *
-    //***************************
-
-    "hyprland/workspaces": {},
-
-    "custom/pacman": {
-        "format": "{} ",
-        "interval": 3600,                     			// every hour
-        "exec": "(checkupdates;pacman -Qm | aur vercmp) | wc -l",	// # of updates
-        "exec-if": "exit 0",                  			// always run; consider advanced run conditions
-        "on-click": "alacritty -e bash -c 'paru'", // update system
-        "signal": 8,
-        "tooltip": false,
-    },
-
-    "clock": {
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt>{calendar}</tt>",
-        "interval": 1,
-        "format": "{:%a, %d %b, %H:%M:%S}"
-    },
-
-    "pulseaudio": {
-        "scroll-step": 0.5, // %, can be a float
-        "reverse-scrolling": 1,
-        "format": "{volume}% 󰋋 {format_source}",
-        "format-muted": "󰟎 {format_source}",
-        "format-bluetooth": "{volume}% 󰋋  {format_source}",
-        "format-bluetooth-muted": "󰟎  {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
-        "on-click": "pavucontrol",
-        "min-length": 13,
-    },
-
-    "tray": {
-        "icon-size": 16,
-        "spacing": 0
-    },
+  "layer": "top",
+  "modules-left": ["hyprland/workspaces"],
+  "modules-center": [],
+  "modules-right": ["custom/updates", "pulseaudio", "clock", "tray"],
+  "custom/updates": {
+    "format": "  {}",
+    "tooltip": false,
+    "interval": 120,
+    "exec": "~/.config/waybar/updates.sh",
+    "on-click": "alacritty -e paru && pkill -SIGRTMIN+8 waybar",
+    "signal": 8
+  },
+  "pulseaudio": {
+    "tooltip": false,
+    "scroll-step": 0.5, // %, can be a float
+    "reverse-scrolling": 1,
+    "format": "{volume}% 󰋋 {format_source}",
+    "format-muted": "󰟎 {format_source}",
+    "format-bluetooth": "{volume}% 󰋋  {format_source}",
+    "format-bluetooth-muted": "󰟎  {format_source}",
+    "format-source": "{volume}% ",
+    "format-source-muted": "",
+    "on-click": "pavucontrol"
+  },
+  "clock": {
+    "interval": 1,
+    "format": "{:%a %d %b %H:%M:%S}"
+  },
+  "tray": {
+    "spacing": 10
+  }
 }
