hyprland: port old volume and power menus

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -201,7 +201,7 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, F, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, G, togglefloating,
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, S, togglesplit, # dwindle
 
@@ -212,7 +212,10 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, L, movefocus, r
 
 
-bind = $mainMod_SHIFT, F, fullscreen
+bind = $mainMod, F, fullscreen
+
+bind = $mainMod, Escape, exec, bash ~/.config/hypr/powermenu.sh
+bind = $mainMod, V, exec, bash ~/.config/hypr/volumemenu.sh
 
 bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | wl-copy
 
