hyprland: remove redundant exit bind

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -199,7 +199,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+# bind = $mainMod, M, exit,
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, G, togglefloating,
 bind = $mainMod, Space, exec, $menu
