hyprland: fix fullscreen remap

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -212,7 +212,7 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, L, movefocus, r
 
 
-bind = $mainMod, F, fullscreen
+bind = $mainMod_SHIFT, F, fullscreen
 
 bind = $mainMod, Escape, exec, bash ~/.config/hypr/powermenu.sh
 bind = $mainMod, V, exec, bash ~/.config/hypr/volumemenu.sh
