waybar: double scroll-step on volume panel

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -174,8 +174,9 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.9 # -1.0 - 1.0, 0 means no modification.
-    scroll_factor = 0.9
+    sensitivity = -0.95 # -1.0 - 1.0, 0 means no modification.
+
+    scroll_factor = 1
 
     touchpad {
         natural_scroll = false
@@ -218,6 +219,7 @@ bind = $mainMod, Escape, exec, bash ~/.config/hypr/powermenu.sh
 bind = $mainMod, V, exec, bash ~/.config/hypr/volumemenu.sh
 
 bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = $mainMod, C, exec, hyprpicker -a
 
 
 # Switch workspaces with mainMod + [0-9]
