hyprland: change screenshot keybind

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -218,7 +218,7 @@ bind = $mainMod_SHIFT, F, fullscreen
 bind = $mainMod, Escape, exec, bash ~/.config/hypr/powermenu.sh
 bind = $mainMod, V, exec, bash ~/.config/hypr/volumemenu.sh
 
-bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = $mainMod_SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod, C, exec, hyprpicker -a
 
 
