waybar: add alacritty icon

--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -16,6 +16,7 @@
       "Discord": " Discord",
       "Steam(.+)": "$1",
       "Steam": " Steam",
+      "Alacritty(.*)": " Alacritty$1",
     },
   },
   "custom/updates": {
