waybar: fix discord icons

--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -12,8 +12,8 @@
       "Mozilla Firefox": "󰈹 Firefox",
       "(.*) - bash": " $1",
       "(.*) - NVIM": " $1",
-      "Discord \\| (.*)": " $1",
-      "Discord": " Discord",
+      "(.*)Discord \\| (.*)": " $2",
+      "(.*)Discord": " Discord",
       "Steam(.+)": "$1",
       "Steam": " Steam",
       "Alacritty(.*)": " Alacritty$1",
