hypr: fix screenshot & fullscreen bind

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -180,12 +180,12 @@ bind = $mod, K, movefocus, u
 bind = $mod, L, movefocus, r
 
 
-bind = $mainMod_SHIFT, F, fullscreen
+bind = $mod_SHIFT, F, fullscreen
 
 bind = $mod, Escape, exec, bash ~/.config/hypr/powermenu.sh
 bind = $mod, V, exec, bash ~/.config/hypr/volumemenu.sh
 
-bind = $mainMod_SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy # screenshot
+bind = $main_SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy # screenshot
 bind = $mod, C, exec, hyprpicker -a
 
 
