hypr: fix screenshot & fullscreen bind

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -185,7 +185,7 @@ bind = $mod_SHIFT, F, fullscreen
 bind = $mod, Escape, exec, bash ~/.config/hypr/powermenu.sh
 bind = $mod, V, exec, bash ~/.config/hypr/volumemenu.sh
 
-bind = $main_SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy # screenshot
+bind = $mod_SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy # screenshot
 bind = $mod, C, exec, hyprpicker -a
 
 
