--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -49,8 +49,17 @@ exec-once = nm-applet &
 
 # https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+
+###################
+### CURSOR SIZE ###
+###################
+
+$cursorSize = 24
+
+env = XCURSOR_SIZE, $cursorSize
+env = HYPRCURSOR_SIZE, $cursorSize
+
+exec-once=hyprctl setcursor Adwaita $(( $cursorSize * 2 ))
 
 
 #####################
@@ -146,6 +155,8 @@ input {
 
     scroll_factor = 1
 
+    emulate_discrete_scroll = 1
+
     touchpad {
         natural_scroll = false
     }
@@ -182,10 +193,10 @@ bind = $mod, L, movefocus, r
 
 bind = $mod_SHIFT, F, fullscreen
 
-bind = $mod, Escape, exec, bash ~/.config/hypr/powermenu.sh
-bind = $mod, V, exec, bash ~/.config/hypr/volumemenu.sh
+bind = $mod, Escape, exec, bash ~/.config/hypr/scripts/powermenu.sh
+bind = $mod, V, exec, bash ~/.config/hypr/scripts/volumemenu.sh
 
-bind = $mod_SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy # screenshot
+bind = $mod_SHIFT, S, exec, bash ~/.config/hypr/scripts/screenshot-menu.sh
 bind = $mod, C, exec, hyprpicker -a
 
 
