hypr: add swaync notification daemon

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -41,6 +41,7 @@ exec-once = hyprpaper
 exec-once = clipse -listen
 exec-once = wl-clip-persist --clipboard regular
 exec-once = nm-applet &
+exec-once = swaync
 
 
 #############################
