wezterm&alacritty: swap out font for original cascadia code

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -39,4 +39,4 @@ blur = true
 dimensions = { columns = 200, lines = 50 }
 
 [font]
-normal = { family = "CaskaydiaCove Nerd Font Mono", style = "Regular" }
+normal = { family = "Cascadia Code NF", style = "Regular" }
