--- a/bash/.config/bash/.aliasrc
+++ b/bash/.config/bash/.aliasrc
@@ -88,14 +88,17 @@ extract() {
   done
 }
 
-command_not_found_handle() {
-  local cmd="$1"
-  shift
+# wsl specific
+if [ -n "$WSL_DISTRO_NAME" ]; then
+  command_not_found_handle() {
+    local cmd="$1"
+    shift
 
-  if command -v "${cmd}.exe" >/dev/null 2>&1; then
-    "${cmd}.exe" "$@"
-  else
-    echo "$cmd: command not found"
-    return 127
-  fi
-}
+    if command -v "${cmd}.exe" >/dev/null 2>&1; then
+      "${cmd}.exe" "$@"
+    else
+      echo "$cmd: command not found"
+      return 127
+    fi
+  }
+fi
