--- a/shells/.config/shells/.aliasrc
+++ b/shells/.config/shells/.aliasrc
@@ -1,14 +1,10 @@
-#!/usr/bin/env bash
+#!/usr/bin/env sh 
 
 alias ls="ls --color=auto"
 alias la="ls -A"
 alias grep="grep --color=auto"
 
 alias c="clear"
-
-shopt -s histappend
-PROMPT_COMMAND="history -a;history -n;$PROMPT_COMMAND"
-alias prev="cat $HOME/.bash_history | grep -v '^prev$' | fzf --tac --no-multi | xargs -r -d '\n' -I {} bash -c {}"
 
 compress() {
   if [ "$#" -eq 0 ]; then
@@ -95,6 +91,11 @@ if [ -n "$WSL_DISTRO_NAME" ]; then
       echo "$cmd: command not found"
       return 127
     fi
+  }
+
+  # for zsh compatibility
+  command_not_found_handler() {
+    command_not_found_handle "$@"
   }
 
   # cd command but you can provide a windows path, make sure you use quotes because many windows paths have spaces
