--- a/shells/.config/shells/.aliasrc
+++ b/shells/.config/shells/.aliasrc
@@ -12,21 +12,21 @@ compress() {
     return 1
   fi
 
-  if [ "$1" == "-xz" ]; then
+  if [ "$1" = "-xz" ]; then
     compression_flag="J"
     extension=".tar.xz"
     shift
-  elif [ "$1" == "-gz" ]; then
+  elif [ "$1" = "-gz" ]; then
     compression_flag="z"
     extension=".tar.gz"
     shift
-  elif [ "$1" == "-zip" ]; then
-    command="zip -qr "$2.zip" "${@:3}""
+  elif [ "$1" = "-zip" ]; then
+    command="zip -qr ${2}.zip ${@:2}"
     echo $command
-    $command
+    eval $command
     return
-  elif [[ "$1" == -* ]]; then
-    echo "compress: invalid flag: $1"
+  elif [[ "$1" = -* ]]; then
+    echo "compress: invalid flag: ${1}"
     return 1
   else
     compression_flag="z"
@@ -34,10 +34,10 @@ compress() {
   fi
 
   if [ "$#" -eq 1 ]; then
-    archive_name=$(basename "$1")
-    command="tar -c${compression_flag}f $archive_name${extension} $1"
+    archive_name=$(basename ${1})
+    command="tar -c${compression_flag}f $archive_name${extension} ${1}"
   else
-    archive_name="$1"
+    archive_name=${1}
     command="tar -c${compression_flag}f $archive_name${extension} ${@:2}"
   fi
 
